--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-native-share": "^7.3.7",
     "react-router-dom": "^5.2.0",
